scrapped the logo idea on account of hosting issues, used align-items center and calling it done

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -71,6 +71,10 @@ body {
   background: gray;
 }
 
+.header {
+  align-items: center;
+}
+
 .jumbotron {
   border: 2px solid black;
 }
